# biodivine-boolean-models

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  bnet_to_aeon.py  bundle.py  convert_cellnetanalyzer_to_bnet.py  convert_to_aeon.py  db_contributions.py  k_count.py  requirements.txt  rules_to_bnet.py  sync.py  utils.py
[v102]__[r157]__[INTERFERON-1]__[covid-uni-lu]/: model.aeon
[v104]__[r166]__[ETC]__[covid-uni-lu]/: model.sbml
[v104]__[r226]__[EGFR-ERBB-SIGNALING]__[cellcollective]/: model.aeon  model.txt
[v10]__[r18]__[ROOT-STEM-CELL-NICHE]__[biomodels]/: model.aeon  model.txt
[v10]__[r27]__[FISSION-YEAST-DAVIDICH-2008]__[ginsim]/: model.zginml
[v10]__[r34]__[BOOLEAN-CELL-CYCLE]__[ginsim]/: model.aeon
[v10]__[r35]__[MAMMALIAN-CELL-CYCLE]__[cellcollective]/: model.aeon
[v110]__[r212]__[RODRIGUEZ-JORGE-TCR-SIGNALLING-17-07-2018]__[ginsim]/: model.aeon  model.sbml
[v118]__[r218]__[IL1-SIGNALING]__[cellcollective]/: model.sbml  model.txt
[v11]__[r11]__[TOLL-PATHWAY-12-06-2013]__[ginsim]/: model.txt
[v11]__[r11]__[TOLL-PATHWAY-OF-DROSOPHILA]__[cellcollective]/: model.sbml
[v120]__[r195]__[COAGULATION-PATHWAY]__[covid-uni-lu]/: model.txt
[v12]__[r30]__[METABOLIC-INTERACTIONS-IN-THE-GUT-MICROBIOME]__[cellcollective]/: model.aeon  model.sbml
[v131]__[r302]__[INFLUENZA-VIRUS-REPLICATION-CYCLE]__[cellcollective]/: model.sbml  model.txt
[v13]__[r18]__[REGULATION-OF-THE-LARABINOSE-OPERON]__[cellcollective]/: model.aeon
[v14]__[r66]__[ARABIDOPSIS-THALIANA-CELL-CYCLE]__[cellcollective]/: model.sbml
[v20]__[r48]__[ERB-B2]__[ginsim]/: model.aeon
(+5906 files in other folders)
