[package]
name = "biodivine-boolean-models"
version = "0.1.0-SNAPSHOT"
authors = ["Samuel Pastva <sam.pastva@gmail.com>"]
edition = "2018"
description = "A collection of Boolean models for testing and benchmarking, with automatic validation."

[[bin]]
name = "sync"
path = "src/bin/sync.rs"

[dependencies]
regex = "1.5.4"
biodivine-lib-param-bn = { git="https://github.com/sybila/biodivine-lib-param-bn.git", rev="7f916aabffc18765f74ea466cac4f684a4620a56" }